Changes in @NEW@:
  o API Changes:
    * xmldata.py moved into rpath_common module as xmllib