@@ -1,3 +1,5 @@
 Changes in @NEW@:
   o API Changes:
     * xmldata.py moved into rpath_common module as xmllib
+  o Bug Fixes:
+    * parseFile method now seeks before and after attempting to read the stream
